--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "element-ui": "^2.4.11",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
+    "koa-generic-session": "^2.0.1",
+    "koa-redis": "^4.0.0",
     "koa-router": "^7.4.0",
     "koa2-cors": "^2.0.6",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
