--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "server": "nodemon server/server.js --watch",
-    "deploy": "pm2 stop all && nuxt build && pm2 start npm --name breakfast -- run start",
+    "deploy": "pm2 stop all && nuxt build && pm2 start npm --name nuxt -- run start && pm2 start npm --name koa -- run server",
     "generate": "nuxt generate"
   },
   "config": {
