--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^3.0.0-0",
     "cross-env": "^5.2.0",
+    "dayjs": "^1.8.16",
     "element-ui": "^2.4.11",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
